--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <word.version>1.3</word.version>
     <guava.version>18.0</guava.version>
     <drools.version>5.5.0.Final</drools.version>
+    <cglib.version>3.2.1</cglib.version>
+    <spring.verson>4.3.1.RELEASE</spring.verson>
   </properties>
 
   <dependencies>
@@ -68,5 +70,56 @@
 		<artifactId>drools-core</artifactId>
 		<version>${drools.version}</version>
 	</dependency>
+	<dependency>
+		<groupId>cglib</groupId>
+		<artifactId>cglib</artifactId>
+		<version>${cglib.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>redis.clients</groupId>
+		<artifactId>jedis</artifactId>
+		<version>2.6.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-beans</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-web</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-webmvc</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>${spring.verson}</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.springframework.kafka</groupId>
+	  <artifactId>spring-kafka</artifactId>
+	  <version>1.0.1.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>2.9.2</version>
+	</dependency>
+	
   </dependencies>
 </project>
